# infinite-note

./: .gitignore  404.html  Pipfile  README.md  index.html  mkdocs.yml  objects.inv  setup.cfg  sitemap.xml  test.sh
docs/: docs.md  index.html  index.md
infinite_note-0.2.0/: PKG-INFO  README.md
infinite_note-0.2.0/src/infinite_note/: __init__.py  infinite_note.py
infinite_note-0.2.0/src/infinite_note/file/: file_manager.py
search/: search_index.json
src/infinite_note/: __init__.py  infinite_note.py
src/infinite_note/file/: file_manager.py
tests/infinite_note/: test_infinite_note.py
tests/infinite_note/file/: inf-question.txt  test_file_manager.py
