[metadata]
name = infinite_note
version = 0.2.0
author = offtheface
author_email = rokany@cau.ac.kr
description = 문제와 답을 입력하여 정답/오답을 관리하는 콘솔 프로그램
long_description = file: README.md
long_description_content_type = text/markdown
url = https://offtheface.github.io/infinite-note
project_urls =
    Bug Tracker = https://github.com/offtheface/infinite-note/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
license = GNU General Public License (GPL)
platform = macOS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    infinite_note-ping = infinite_note:ping
    inf-note-input = infinite_note:input_question
    inf-note-count = infinite_note:count_question
    inf-note-challenge = infinite_note:output_question
